--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -38,20 +38,22 @@ using [*UQ Search*](https://www.uq.edu.au/search).
         <div class="uq-header__nav-primary" data-gtm-category="Header navigation">
           <nav class="uq-header__nav-primary-container">
             <ul class="uq-header__nav-primary-list">
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
+              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au/">Study</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
-                    <a href="#" class="megamenu__overview-link">Study overview</a>
+                    <a href="https://study.uq.edu.au/" class="megamenu__overview-link">Study overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <div class="megamenu__heading">Study options</div>
+                        <div class="megamenu__heading">Study with us</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Find a course or program</a></li>
-                            <li><a href="#">Browse study areas</a></li>
-                            <li><a href="#">Study options & course types</a></li>
-                            <li><a href="#">How to apply</a></li>
-                            <li><a href="#">Scholarships</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options/programs ">Find a course or program</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options">Browse study areas</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options">Study options</a></li>
+                            <li><a href="https://study.uq.edu.au/admissions">How to apply</a></li>
+                            <li><a href="https://scholarships.uq.edu.au/">Scholarships</a></li>
+                            <li><a href="https://my.uq.edu.au/starting-at-uq">Starting at UQ</a></li>
+                            <li><a href="https://study.uq.edu.au/contact-us">Contact</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -59,18 +61,11 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Discover UQ</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Why choose UQ</a></li>
-                            <li><a href="#">Enhance your employability</a></li>
-                            <li><a href="#">Campuses, maps & transport</a></li>
-                          </ul>
-                        </nav>
-                        <div class="megamenu__heading">Student life</div>
-                        <nav class="megamenu__menu">
-                          <ul>
-                            <li><a href="#">Life at UQ and accommodation</a></li>
-                            <li><a href="#">Extra student experiences</a></li>
-                            <li><a href="#">Events for prospective students</a></li>
-                            <li><a href="#">Starting university</a></li>
+                            <li><a href="https://study.uq.edu.au/why-choose-uq">Why choose UQ</a></li>
+                            <li><a href="https://employability.uq.edu.au/get-the-edge">Enhance your employability</a></li>
+                            <li><a href="https://study.uq.edu.au/university-life">Life at UQ and accommodation</a></li>
+                            <li><a href="https://campuses.uq.edu.au/">Campuses, maps & transport</a></li>
+                            <li><a href="https://study.uq.edu.au/events">Events for prospective students</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -78,15 +73,15 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Information for</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">International students</a></li>
-                            <li><a href="#">High school students</a></li>
-                            <li><a href="#">Non-school leavers</a></li>
-                            <li><a href="#">Postgraduate research (HDR) students</a></li>
-                            <li><a href="#">Aboriginal and Torres Strait Islander students</a></li>
-                            <li><a href="#">Study Abroad and Exchange students</a></li>
-                            <li><a href="#">Teachers and guidance counsellors</a></li>
-                            <li><a href="#">Parents and guardians</a></li>
-                            <li><a href="#">Current students</a></li>
+                            <li><a href="https://study.uq.edu.au/international-students">International students</a></li>
+                            <li><a href="https://study.uq.edu.au/high-school-students ">High school students</a></li>
+                            <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
+                            <li><a href="https://atsis.uq.edu.au/future-students#">Aboriginal and Torres Strait Islander students</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
+                            <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
+                            <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
+                            <li><a href="https://my.uq.edu.au/">Current students</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -97,26 +92,28 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
-                    <a href="#" class="megamenu__overview-link">Research overview</a>
+                    <a href="https://research.uq.edu.au/" class="megamenu__overview-link">Research overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <div class="megamenu__heading">Partner with us</div>
+                        <div class="megamenu__heading">Our research</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Research excellence and impact</a></li>
-                            <li><a href="#">Research support, integrity and ethics</a></li>
-                            <li><a href="#">Industry research collaboration</a></li>
-                            <li><a href="#">Faculties, schools, intitutues & centres</a></li>
-                            <li><a href="#">Find a researcher</a></li>
+                            <li><a href="https://research.uq.edu.au/news/impact">Research impacts</a></li>
+                            <li><a href="https://research.uq.edu.au/research-support">Reseach support, integrity and ethics</a></li>
+                            <li><a href="https://research.uq.edu.au/partner-with-us">Industry research collaboration</a></li>
+                            <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
+                            <li><a href="https://research.uq.edu.au/research-infrastructure">Research facilities</a></li>
+                            <li><a href="https://researchers.uq.edu.au/">Find a researcher</a></li>
+                            <li><a href="https://research.uq.edu.au/contact">Contact</a></li>
                           </ul>
                         </nav>
                       </div>
                       <div class="megamenu__column">
-                        <div class="megamenu__heading">Research degrees</div>
+                        <div class="megamenu__heading">Graduate research</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">PhDs and research degrees</a></li>
-                            <li><a href="#">Find a supervisor</a></li>
+                            <li><a href="https://graduate-school.uq.edu.au/">Research degrees (including PhDs)</a></li>
+                            <li><a href="https://researchers.uq.edu.au/">Find a supervisor</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -124,10 +121,10 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Information for</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Future research students</a></li>
-                            <li><a href="#">New research students</a></li>
-                            <li><a href="#">Current research students</a></li>
-                            <li><a href="#">Prospective research students</a></li>
+                            <li><a href="https://study.uq.edu.au/study-options/research">Future research students</a></li>
+                            <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research/get-started">New research students</a></li>
+                            <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research">Current research students</a></li>
+                            <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research students</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -135,20 +132,20 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                   </div>
                 </div>
               </li>
-              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships">Partners and Community</a>
+              <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au">Partners and Community</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
-                    <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
+                    <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link">Partners and Community overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Partner with us</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Partners, initiatives and impact</a></li>
-                            <li><a href="#">Research & Corporate Partnerships</a></li>
-                            <li><a href="#">Work placements and Internships</a></li>
-                            <li><a href="#">Teaching and Exchange Collaborations</a></li>
-                            <li><a href="#">Sponsorship</a></li>
+                            <li><a href="https://www.uq.edu.au/partner/business-industry">Partnership opportunities</a></li>
+                            <li><a href="https://research.uq.edu.au/partner-with-us">Research and corporate partnerships</a></li>
+                            <li><a href="https://employability.uq.edu.au/work-experience">Work placements and internships</a></li>
+                            <li><a href="https://global-engagement.uq.edu.au/partnerships">Teaching and exchange collaborations</a></li>
+                            <li><a href="https://about.uq.edu.au/sponsorships">Sponsorship</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -156,12 +153,12 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Our communities</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Alumni community</a></li>
-                            <li><a href="#">Giving and philanthropy</a></li>
-                            <li><a href="#">Indigenous engagement</a></li>
-                            <li><a href="#">High school engagement</a></li>
-                            <li><a href="#">Community engagement & volunteering</a></li>
-                            <li><a href="#">Community facilities and services</a></li>
+                            <li><a href="https://alumni.uq.edu.au/#">Alumni community</a></li>
+                            <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
+                            <li><a href="https://atsis.uq.edu.au/#">Indigenous engagement</a></li>
+                            <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
+                            <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
+                            <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
                          </ul>
                         </nav>
                       </div>
@@ -169,10 +166,10 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Information for</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Donors</a></li>
-                            <li><a href="#">Business and industry</a></li>
-                            <li><a href="#">Government</a></li>
-                            <li><a href="#">Media</a></li>
+                            <li><a href="https://alumni.uq.edu.au/">Alumni</a></li>
+                            <li><a href="https://alumni.uq.edu.au/giving">Donors</a></li>
+                            <li><a href="https://www.uq.edu.au/partner/business-industry">Business and industry</a></li>
+                            <li><a href="https://www.uq.edu.au/news/">Media</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -183,18 +180,19 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
                 <div class="uq-header__megamenu">
                   <div class="uq-header__megamenu-container">
-                    <a href="#" class="megamenu__overview-link">About overview</a>
+                    <a href="https://about.uq.edu.au/" class="megamenu__overview-link">About overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Our profile</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Introducing UQ</a></li>
-                            <li><a href="#">Vision, values and strategy</a></li>
-                            <li><a href="#">Key initiatives</a></li>
-                            <li><a href="#">Organisational structure and governance</a></li>
-                            <li><a href="#">Policies and procedures</a></li>
-                            <li><a href="#">Faculties, schools, institutes and centres</a></li>
+                            <li><a href="https://about.uq.edu.au/university-profile">Introducing UQ</a></li>
+                            <li><a href="https://about.uq.edu.au/strategic-plan">Vision, values and strategy</a></li>
+                            <li><a href="https://teaching-learning.uq.edu.au/">Teaching and learning</a></li>
+                            <li><a href="https://about.uq.edu.au/initiatives">Initiatives</a></li>
+                            <li><a href="https://about.uq.edu.au/organisation">Organisational structure and governance</a></li>
+                            <li><a href="https://ppl.app.uq.edu.au/">Policies and procedures</a></li>
+                            <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -202,18 +200,18 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                         <div class="megamenu__heading">Campuses and facilities</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Campuses, maps & transport</a></li>
-                            <li><a href="#">Colleges and Accommodation</a></li>
-                            <li><a href="#">Community Faciliites and Services</a></li>
+                            <li><a href="https://campuses.uq.edu.au/">Campuses, maps and transport</a></li>
+                            <li><a href="https://my.uq.edu.au/student-support/accommodation">Colleges and accommodation</a></li>
+                            <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
                           </ul>
                         </nav>
                       </div>
                       <div class="megamenu__column">
-                        <div class="megamenu__heading">Excellence</div>
+                        <div class="megamenu__heading">Working at UQ</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Teaching and Learning</a></li>
-                            <li><a href="#">Careers at UQ</a></li>
+                            <li><a href="https://careers.uq.edu.au/">Careers at UQ</a></li>
+                            <li><a href="https://careers.uq.edu.au/search-jobs">Jobs search</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -236,47 +234,42 @@ using [*UQ Search*](https://www.uq.edu.au/search).
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
             <ul>
               <li>
-                <a href="#">Study overview</a>
+                <a href="https://study.uq.edu.au/">Study overview</a>
               </li>
               <li>
-                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study options</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study with us</a>
                 <ul>
-                  <li><a href="#">Find a course or program</a></li>
-                  <li><a href="#">Browse study areas</a></li>
-                  <li><a href="#">Study options & course types</a></li>
-                  <li><a href="#">How to apply</a></li>
-                  <li><a href="#">Scholarships</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options/programs ">Find a course or program</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options">Browse study areas</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options">Study options</a></li>
+                  <li><a href="https://study.uq.edu.au/admissions">How to apply</a></li>
+                  <li><a href="https://scholarships.uq.edu.au/">Scholarships</a></li>
+                  <li><a href="https://my.uq.edu.au/starting-at-uq">Starting at UQ</a></li>
+                  <li><a href="https://study.uq.edu.au/contact-us">Contact</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Discover UQ</a>
                 <ul>
-                  <li><a href="#">Why choose UQ</a></li>
-                  <li><a href="#">Enhance your employability</a></li>
-                  <li><a href="#">Campuses, maps & transport</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Student life</a>
-                <ul>
-                  <li><a href="#">Life at UQ and accommodation</a></li>
-                  <li><a href="#">Extra student experiences</a></li>
-                  <li><a href="#">Events for prospective students</a></li>
-                  <li><a href="#">Starting university</a></li>
+                  <li><a href="https://study.uq.edu.au/why-choose-uq">Why choose UQ</a></li>
+                  <li><a href="https://employability.uq.edu.au/get-the-edge">Enhance your employability</a></li>
+                  <li><a href="https://study.uq.edu.au/university-life">Life at UQ and accommodation</a></li>
+                  <li><a href="https://campuses.uq.edu.au/">Campuses, maps & transport</a></li>
+                  <li><a href="https://study.uq.edu.au/events">Events for prospective students</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
-                  <li><a href="#">International students</a></li>
-                  <li><a href="#">High school students</a></li>
-                  <li><a href="#">Non-school leavers</a></li>
-                  <li><a href="#">Postgraduate research (HDR) students</a></li>
-                  <li><a href="#">Aboriginal and Torres Strait Islander students</a></li>
-                  <li><a href="#">Study Abroad and Exchange students</a></li>
-                  <li><a href="#">Teachers and guidance counsellors</a></li>
-                  <li><a href="#">Parents and guardians</a></li>
-                  <li><a href="#">Current students</a></li>
+                  <li><a href="https://study.uq.edu.au/international-students">International students</a></li>
+                  <li><a href="https://study.uq.edu.au/high-school-students ">High school students</a></li>
+                  <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
+                  <li><a href="https://atsis.uq.edu.au/future-students#">Aboriginal and Torres Strait Islander students</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
+                  <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
+                  <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
+                  <li><a href="https://my.uq.edu.au/">Current students</a></li>
                 </ul>
               </li>
             </ul>
@@ -285,33 +278,35 @@ using [*UQ Search*](https://www.uq.edu.au/search).
             <a  class="uq-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
             <ul>
               <li>
-                <a href="#">Research overview</a>
+                <a href="https://research.uq.edu.au/">Research overview</a>
               </li>
 
               <li>
-                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
                 <ul>
-                  <li><a href="#">Research excellence and impact</a></li>
-                  <li><a href="#">Research support, integrity and ethics</a></li>
-                  <li><a href="#">Industry research collaboration</a></li>
-                  <li><a href="#">Faculties, schools, intitutues & centres</a></li>
-                  <li><a href="#">Find a researcher</a></li>
+                  <li><a href="https://research.uq.edu.au/news/impact">Research impacts</a></li>
+                  <li><a href="https://research.uq.edu.au/research-support">Reseach support, integrity and ethics</a></li>
+                  <li><a href="https://research.uq.edu.au/partner-with-us">Industry research collaboration</a></li>
+                  <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
+                  <li><a href="https://research.uq.edu.au/research-infrastructure">Research facilities</a></li>
+                  <li><a href="https://researchers.uq.edu.au/">Find a researcher</a></li>
+                  <li><a href="https://research.uq.edu.au/contact">Contact</a></li>
                 </ul>
               </li>
               <li>
-                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Research degrees</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Graduate research</a>
                 <ul>
-                  <li><a href="#">PhDs and research degrees</a></li>
-                  <li><a href="#">Find a supervisor</a></li>
+                  <li><a href="https://graduate-school.uq.edu.au/">Research degrees (including PhDs)</a></li>
+                  <li><a href="https://researchers.uq.edu.au/">Find a supervisor</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
-                  <li><a href="#">Future research students</a></li>
-                  <li><a href="#">New research students</a></li>
-                  <li><a href="#">Current research students</a></li>
-                  <li><a href="#">Prospective research students</a></li>
+                  <li><a href="https://study.uq.edu.au/study-options/research">Future research students</a></li>
+                  <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research/get-started">New research students</a></li>
+                  <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research">Current research students</a></li>
+                  <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research students</a></li>
                 </ul>
               </li>
             </ul>
@@ -320,36 +315,36 @@ using [*UQ Search*](https://www.uq.edu.au/search).
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
             <ul>
               <li>
-                <a href="#">Partners and community overview</a>
+                <a href="https://partners-community.uq.edu.au">Partners and community overview</a>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
                 <ul>
-                  <li><a href="#">Partners, initiatives and impact</a></li>
-                  <li><a href="#">Research & Corporate Partnerships</a></li>
-                  <li><a href="#">Work placements and Internships</a></li>
-                  <li><a href="#">Teaching and Exchange Collaborations</a></li>
-                  <li><a href="#">Sponsorship</a></li>
+                  <li><a href="https://www.uq.edu.au/partner/business-industry">Partnership opportunities</a></li>
+                  <li><a href="https://research.uq.edu.au/partner-with-us">Research and corporate partnerships</a></li>
+                  <li><a href="https://employability.uq.edu.au/work-experience">Work placements and internships</a></li>
+                  <li><a href="https://global-engagement.uq.edu.au/partnerships">Teaching and exchange collaborations</a></li>
+                  <li><a href="https://about.uq.edu.au/sponsorships">Sponsorship</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our communities</a>
                 <ul>
-                  <li><a href="#">Alumni community</a></li>
-                  <li><a href="#">Giving and philanthropy</a></li>
-                  <li><a href="#">Indigenous engagement</a></li>
-                  <li><a href="#">High school engagement</a></li>
-                  <li><a href="#">Community engagement & volunteering</a></li>
-                  <li><a href="#">Community facilities and services</a></li>
+                  <li><a href="https://alumni.uq.edu.au/#">Alumni community</a></li>
+                  <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
+                  <li><a href="https://atsis.uq.edu.au/#">Indigenous engagement</a></li>
+                  <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
+                  <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
+                  <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
-                  <li><a href="#">Donors</a></li>
-                  <li><a href="#">Business and industry</a></li>
-                  <li><a href="#">Government</a></li>
-                  <li><a href="#">Media</a></li>
+                  <li><a href="https://alumni.uq.edu.au/">Alumni</a></li>
+                  <li><a href="https://alumni.uq.edu.au/giving">Donors</a></li>
+                  <li><a href="https://www.uq.edu.au/partner/business-industry">Business and industry</a></li>
+                  <li><a href="https://www.uq.edu.au/news/">Media</a></li>
                 </ul>
               </li>
             </ul>
@@ -358,51 +353,52 @@ using [*UQ Search*](https://www.uq.edu.au/search).
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">About</a>
             <ul>
               <li>
-                <a href="#">About overview</a>
+                <a href="https://about.uq.edu.au/">About overview</a>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our profile</a>
                 <ul>
-                  <li><a href="#">Introducing UQ</a></li>
-                  <li><a href="#">Vision, values and strategy</a></li>
-                  <li><a href="#">Key initiatives</a></li>
-                  <li><a href="#">Organisational structure and governance</a></li>
-                  <li><a href="#">Policies and procedures</a></li>
-                  <li><a href="#">Faculties, schools, institutes and centres</a></li>
+                  <li><a href="https://about.uq.edu.au/university-profile">Introducing UQ</a></li>
+                  <li><a href="https://about.uq.edu.au/strategic-plan">Vision, values and strategy</a></li>
+                  <li><a href="https://teaching-learning.uq.edu.au/">Teaching and learning</a></li>
+                  <li><a href="https://about.uq.edu.au/initiatives">Initiatives</a></li>
+                  <li><a href="https://about.uq.edu.au/organisation">Organisational structure and governance</a></li>
+                  <li><a href="https://ppl.app.uq.edu.au/">Policies and procedures</a></li>
+                  <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
                 </ul>
               </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Campuses and facilities</a>
                 <ul>
-                  <li><a href="#">Campuses, maps & transport</a></li>
-                  <li><a href="#">Colleges and Accommodation</a></li>
-                  <li><a href="#">Community Faciliites and Services</a></li>
+                  <li><a href="https://campuses.uq.edu.au/">Campuses, maps and transport</a></li>
+                  <li><a href="https://my.uq.edu.au/student-support/accommodation">Colleges and accommodation</a></li>
+                  <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
                 </ul>
               </li>
               <li>
-                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Excellence</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Working at UQ</a>
                 <ul>
-                  <li><a href="#">Teaching and Learning</a></li>
-                  <li><a href="#">Careers at UQ</a></li>
+                  <li><a href="https://careers.uq.edu.au/">Careers at UQ</a></li>
+                  <li><a href="https://careers.uq.edu.au/search-jobs">Jobs search</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">UQ home</a>
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://www.uq.edu.au/" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">News</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Events</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Give</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
           </li>
-          <li  class="uq-header__nav-secondary-item">
-            <a class="uq-header__nav-secondary-link" href="#">Contact</a>
-          </li>  
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://contacts.uq.edu.au/" class="uq-header__nav-secondary-link">Contact</a>
+          </li> 
       </nav>
       <div class="uq-header__search" data-gtm-category="Header search">
         <div class="uq-header__search-container">
@@ -423,19 +419,19 @@ using [*UQ Search*](https://www.uq.edu.au/search).
         <nav class="uq-header__nav-secondary-container">
           <ul class="uq-header__nav-secondary-list">
               <li class="uq-header__nav-secondary-item">
-                <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">UQ home</a>
+                <a href="https://www.uq.edu.au/" class="uq-header__nav-secondary-link">UQ home</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.edu.au/events/" class="uq-header__nav-secondary-link">Events</a>
+                  <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://alumni.uq.edu.au/giving/" class="uq-header__nav-secondary-link">Give</a>
+                  <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                <a href="https://uq.edu.au/departments/" class="uq-header__nav-secondary-link">Contact</a>
+                <a href="https://contacts.uq.edu.au/" class="uq-header__nav-secondary-link">Contact</a>
               </li>
           </ul>
         </nav>
